--- a/primary/index.html
+++ b/primary/index.html
@@ -26,8 +26,9 @@
 
 
     <section id="home" class="hero">
-        <div class="hImg">
-            <img src="../images/primary/zarahbd.jpeg" alt="">
+        <div 
+        >
+            <img src="../images/primary/zarahbd.jpeg" alt="jkk">
         </div>
 
         <div class="whatsapp-container">
