--- a/primary/index.html
+++ b/primary/index.html
@@ -60,6 +60,12 @@
         <h2>Our Menu</h2>
         <div class="menu-items">
             <div class="menu-item">
+                <img src="../images/primary/zarahbd.jpeg">
+                <h3>Grilled Salmon</h3>
+                <p>Perfectly grilled salmon with roasted potatoes.</p>
+                <!-- <span class="price">$18.99</span> -->
+            </div>
+            <div class="menu-item">
                 <img src="https://media.istockphoto.com/id/2175971935/photo/traditional-african-egusi-soup-with-pounded-yam.webp?a=1&b=1&s=612x612&w=0&k=20&c=oVKhRC-nBfa1PCWi0GGeho9KVGZWwHV2LUymwd6BIkE=" alt="Pasta Primavera" class="menu-image">
                 <h3>Pasta Primavera</h3>
                 <p>Fresh vegetables and pasta in a creamy sauce.</p>
@@ -67,12 +73,7 @@
                 <!-- <span class="price">$12.99</span> -->
                  <button><a href="https://wa.me/2348144637428">Order Now</a></button>
             </div>
-            <div class="menu-item">
-                <img src="https://media.istockphoto.com/id/1406317293/photo/nigerian-okra-okro-soup.webp?a=1&b=1&s=612x612&w=0&k=20&c=N-HrPylhHRHeCwvu5zyp0M1q3WSUFe0qyw_YN8mtRNs=" alt="Grilled Salmon" class="menu-image">
-                <h3>Grilled Salmon</h3>
-                <p>Perfectly grilled salmon with roasted potatoes.</p>
-                <!-- <span class="price">$18.99</span> -->
-            </div>
+            
             <div class="menu-item">
                 <img src="https://media.istockphoto.com/id/1265268905/photo/barbecue-chicken-jollof-rice.webp?a=1&b=1&s=612x612&w=0&k=20&c=AfZnDPRPtD0-S1pn0WQwmmQLvw3nbCr1gL2iAYtVDM4=" alt="Grilled Salmon" class="menu-image">
                 <h3>Grilled Salmon</h3>
